# quasar

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  DEBIAN-REQUIREMENTS.md  Doxyfile  Doxyfile-pdf1  IDEAS.md  LICENSE  README.md
.github/workflows/: ci.yml
cmake-projects/: CMakeLists.txt  README.md
cmake-projects/coretypes/: CMakeLists.txt
cmake-projects/coretypes/include/quasar/coretypes/: BitBuffer.hpp  BitBufferSlice.hpp  Boolean.hpp  Buffer.hpp  BufferSlice.hpp  FloatingPoint.hpp  FloatingPointTypes.hpp  Integer.hpp  IntegerTypes.hpp  Number.hpp  String.hpp
cmake-projects/coretypes/src/: BitBuffer.cpp  BitBufferSlice.cpp  Boolean.cpp  Buffer.cpp  BufferSlice.cpp  String.cpp
cmake-projects/coretypes/test/: CMakeLists.txt  TestBitBuffer.cpp  TestBitBufferSlice.cpp  TestBitBufferStress.cpp  TestBoolean.cpp  TestBuffer.cpp  TestFloatingPoint.cpp  TestInteger.cpp  TestString.cpp  TestThreadSafety.cpp
cmake-projects/named/: CMakeLists.txt
cmake-projects/named/include/quasar/named/: NamedBitBuffer.h  NamedBitBuffer.hpp  NamedBitBufferSlice.h  NamedBitBufferSlice.hpp  NamedBoolean.h  NamedBoolean.hpp  NamedBuffer.h  NamedBuffer.hpp  NamedBufferSlice.h  NamedBufferSlice.hpp  NamedFloatingPoint.h  NamedFloatingPoint.hpp  NamedInteger.h  NamedInteger.hpp  NamedObject.h  NamedObject.hpp  NamedString.hpp  Serialization.h  Serialization.hpp  Traversal.h  Traversal.hpp
cmake-projects/named/src/: NamedBitBuffer.cpp  NamedBitBufferSlice.cpp  NamedBoolean.cpp  NamedBuffer.cpp  NamedBufferSlice.cpp  NamedObject.cpp  NamedString.cpp  Serialization.cpp  Traversal.cpp
cmake-projects/named/test/: CMakeLists.txt  TestNamedObject.cpp  TestNamedObjectStress.cpp  TestNamedObjectThreadSafety.cpp  TestNamedSlices.cpp  TestNamedString.cpp  TestSerialization.cpp  TestTraversal.cpp
cmake-projects/resoem/: CMakeLists.txt  README.md  TODO.md
cmake-projects/resoem/include/resoem/: CoEHandler.hpp  Enumerator.hpp  EtherCATFrame.hpp  EtherCATTypes.hpp  MailboxHandler.hpp  RawSocket.hpp  Slave.hpp  common.hpp
cmake-projects/resoem/src/: CoEHandler.cpp  Enumerator.cpp  EtherCATFrame.cpp  MailboxHandler.cpp  RawSocket.cpp
cmake-projects/resoem/test/: test_broadcast_read.cpp  test_coe_upload.cpp  test_enumeration.cpp
cmake-projects/smp/: CMakeLists.txt  COMPARISON_REPORT.md  PORTAGE_COVERAGE.md
cmake-projects/smp/include/Smp/: AccessKind.h  AnySimple.h  AnySimpleArray.h  CannotDelete.h  CannotRemove.h  CannotRestore.h  CannotStore.h  CollectionIterator.h  ComponentStateKind.h  ContainerFull.h  DuplicateName.h  DuplicateUuid.h  EventSinkAlreadySubscribed.h  EventSinkNotSubscribed.h  Exception.h  FieldAlreadyConnected.h  IAggregate.h  IArrayField.h  ICollection.h  IComponent.h  IComposite.h  IContainer.h  IDataflowField.h  IDynamicInvocation.h  IEntryPoint.h  IEntryPointPublisher.h  IEventConsumer.h  IEventProvider.h  IEventSink.h  IEventSource.h  IFactory.h  IFailure.h  IFallibleModel.h  IField.h  IForcibleField.h  ILinkingComponent.h  IModel.h  IObject.h  IOperation.h  IParameter.h  (+41 more)
cmake-projects/smp/include/Smp/Publication/: DuplicateLiteral.h  IArrayType.h  IClassType.h  IEnumerationType.h  IFloatType.h  IIntegerType.h  IPublishOperation.h  IStringType.h  IStructureType.h  IType.h  ITypeRegistry.h  InvalidPrimitiveType.h  ParameterDirectionKind.h  TypeAlreadyRegistered.h  TypeNotRegistered.h
cmake-projects/smp/include/Smp/Services/: EntryPointAlreadySubscribed.h  EntryPointNotSubscribed.h  EventId.h  IEventManager.h  ILinkRegistry.h  ILogger.h  IResolver.h  IScheduler.h  ITimeKeeper.h  InvalidCycleTime.h  InvalidEventId.h  InvalidEventName.h  InvalidEventTime.h  InvalidSimulationTime.h  LogMessageKind.h  TimeKind.h
cmake-projects/smp/share/ecss/schemas/: xlink.xsd
cmake-projects/smp/share/ecss/schemas/Core/: Elements.xsd  Types.xsd
cmake-projects/smp/share/ecss/schemas/Smdl/: Assembly.xsd  Catalogue.xsd  Configuration.xsd  Package.xsd  Schedule.xsd
cmake-projects/smp/src/Smp/: AccessKind.cpp  AnySimple.cpp  Collection.h  ComponentStateKind.cpp  Field.h  Object.h  Operation.h  Parameter.h  PrimitiveTypes.cpp  Property.h  Request.cpp  Request.h  ServiceNames.cpp  SimpleField.h  Simulator.cpp  Simulator.h  SimulatorStateKind.cpp  Storage.cpp  Storage.h  Uuid.cpp  Uuids.cpp  ViewKind.cpp
cmake-projects/smp/src/Smp/Publication/: ParameterDirectionKind.cpp  Publication.cpp  Publication.h  PublishOperation.cpp  PublishOperation.h  Type.h  TypeRegistry.cpp  TypeRegistry.h
cmake-projects/smp/src/Smp/Services/: TimeKind.cpp
cmake-projects/smp/test/: AllHeadersTest.cpp  CMakeLists.txt  CoreInterfacesTest.cpp  PublicationTest.cpp  SimulatorTest.cpp  StructureTest.cpp
cmake-projects/smp/umf/: ecss.smp.smp.smppkg
doc/architecture/: CP-0010.md  CS-0010.md  README.md
doc/features/: FE-0010.md  FE-0020.md  FE-0030.md  README.md  UC-0010.md
doc/impl/: README.md
linux-modules/: CMakeLists.txt  README.md  readme.txt
linux-modules/ethercat/devices/stmmac/: Kbuild.in  Makefile.am  chain_mode-6.12-ethercat.c  chain_mode-6.4-ethercat.c  common-6.12-ethercat.h  common-6.4-ethercat.h  dwmac-intel-6.12-ethercat.c  dwmac-intel-6.4-ethercat.c  dwmac100-6.12-ethercat.h  dwmac100-6.4-ethercat.h  dwmac1000-6.12-ethercat.h  dwmac1000-6.4-ethercat.h  dwmac1000_core-6.12-ethercat.c  dwmac1000_core-6.4-ethercat.c  dwmac1000_dma-6.12-ethercat.c  dwmac1000_dma-6.4-ethercat.c  dwmac100_core-6.12-ethercat.c  dwmac100_core-6.4-ethercat.c  dwmac100_dma-6.12-ethercat.c  dwmac100_dma-6.4-ethercat.c  dwmac4-6.12-ethercat.h  dwmac4-6.4-ethercat.h  dwmac4_core-6.12-ethercat.c  dwmac4_core-6.4-ethercat.c  dwmac4_descs-6.12-ethercat.c  dwmac4_descs-6.4-ethercat.c  dwmac4_dma-6.12-ethercat.c  dwmac4_dma-6.4-ethercat.c  dwmac4_lib-6.12-ethercat.c  dwmac4_lib-6.4-ethercat.c  dwmac5-6.12-ethercat.c  dwmac5-6.4-ethercat.c  dwmac_lib-6.12-ethercat.c  dwmac_lib-6.4-ethercat.c  dwxgmac2-6.12-ethercat.h  dwxgmac2-6.4-ethercat.h  dwxgmac2_core-6.12-ethercat.c  dwxgmac2_core-6.4-ethercat.c  dwxgmac2_descs-6.12-ethercat.c  dwxgmac2_descs-6.4-ethercat.c  (+35 more)
tests/: coretypes_integer_test.cpp
(+1229 files in other folders)
